# ChangeLog for x11-themes/mythtv-themes
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.21 2006/06/08 23:49:33 eradicator Exp $

  08 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  mythtv-themes-0.19.ebuild:
  Added to ~ppc64.

  23 May 2006; Doug Goldstein <cardoe@gentoo.org>
  -mythtv-themes-0.18.ebuild, mythtv-themes-0.19.ebuild:
  Marking stable per bug #123066

  14 Mar 2006; Doug Goldstein <cardoe@gentoo.org> mythtv-themes-0.19.ebuild:
  Marking stable on ppc and x86

*mythtv-themes-0.19 (12 Feb 2006)

  12 Feb 2006; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-themes-0.19.ebuild:
  Rev bump and clean up of the ebuild

  16 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -mythtv-themes-0.13.ebuild, -mythtv-themes-0.14.ebuild,
  -mythtv-themes-0.15.ebuild, -mythtv-themes-0.17.ebuild,
  mythtv-themes-0.18.ebuild:
  Stable amd64, x86.  Deleted old versions.

  25 Jun 2005; Sven Wegener <swegener@gentoo.org> mythtv-themes-0.13.ebuild,
  mythtv-themes-0.14.ebuild, mythtv-themes-0.15.ebuild,
  mythtv-themes-0.17.ebuild, mythtv-themes-0.18.ebuild:
  Removed useless || dependency.

  31 May 2005; David Holm <dholm@gentoo.org> mythtv-themes-0.18.ebuild:
  Added to ~ppc.

*mythtv-themes-0.18 (18 Apr 2005)

  18 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +mythtv-themes-0.18.ebuild:
  Version bump.

  01 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  mythtv-themes-0.17.ebuild:
  Removing Titivillus theme since it is included in the base install.

*mythtv-themes-0.17 (27 Feb 2005)

  27 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +mythtv-themes-0.17.ebuild:
  Added isthmus and MythTVMediaCenter themes.

  27 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org>
  mythtv-themes-0.15.ebuild:
  Added to ~amd64

  04 Dec 2004; Brian Jackson <iggy@gentoo.org> mythtv-themes-0.15.ebuild: