@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST myththemes-0.19.tar.bz2 9484236 RMD160 01e45f88855c1e3c095ecbda02838482b9ba1204 SHA1 e5c52475dba36f1c9c159c4a302200a72d1e9606 SHA256 9ab2ac86f49563da654381a397de4d9d0a48988faa9f9d492761be19a51a7941
+DIST myththemes-0.20.tar.bz2 14184343 RMD160 8b5a3ee1ee8b0c3e94a9c42c625e2097c09bf3b1 SHA1 a60fbb2a8a348af853257a00f8664eac9077fbe9 SHA256 b647ce10b6a35c2dd0f68e38ca60f10f0739ff3b3082f371282235e21260998c
 EBUILD mythtv-themes-0.19.ebuild 811 RMD160 912bd36f842147e64108262b6b1e943c84d1cd28 SHA1 4f0c8b3095b29b15b63139476e2be1c41c36b0d6 SHA256 7fa3312ffc971aef69e4e4828d7b7a0a7036c5fb34b4cb7e4df1682495fe9f17
 MD5 ad911938df13d293ebb9d6e3343a7a60 mythtv-themes-0.19.ebuild 811
 RMD160 912bd36f842147e64108262b6b1e943c84d1cd28 mythtv-themes-0.19.ebuild 811
 SHA256 7fa3312ffc971aef69e4e4828d7b7a0a7036c5fb34b4cb7e4df1682495fe9f17 mythtv-themes-0.19.ebuild 811
-MISC ChangeLog 4087 RMD160 e438db8d9f0add979be4dbcc8af09b8765bfe418 SHA1 f0946ff3b76816a8e1b11cb5498efba035113b7b SHA256 cbd40f947dbc3972910b55cd3d709a4b55d2ce46ed7075dbd78dadfcefc3410b
-MD5 07be058ce2bcb03b4bfca7dcaace768b ChangeLog 4087
-RMD160 e438db8d9f0add979be4dbcc8af09b8765bfe418 ChangeLog 4087
-SHA256 cbd40f947dbc3972910b55cd3d709a4b55d2ce46ed7075dbd78dadfcefc3410b ChangeLog 4087
+EBUILD mythtv-themes-0.20.ebuild 810 RMD160 248e0cb5e18f02dee725934f99efe588b531791b SHA1 c57b64625afceed5b6758f9ed24a3d9b5fead6ba SHA256 814ab770e6ac28b7469157360206ecc497da4eb40b99f64467db410532c666da
+MD5 87de4d257f6dd9a6be1f57fd89ce6015 mythtv-themes-0.20.ebuild 810
+RMD160 248e0cb5e18f02dee725934f99efe588b531791b mythtv-themes-0.20.ebuild 810
+SHA256 814ab770e6ac28b7469157360206ecc497da4eb40b99f64467db410532c666da mythtv-themes-0.20.ebuild 810
+MISC ChangeLog 4215 RMD160 019a5c89aff6ed26b98b030a535bc3443f2862e1 SHA1 49ca4b4af73d682e730569df1320fd3e2434adc5 SHA256 84dae9acaa9fcda3e75332d1e53efdaa96077828999a5100c6636148b8f5d453
+MD5 5bfba87693b8b325b7853374ec6a66b8 ChangeLog 4215
+RMD160 019a5c89aff6ed26b98b030a535bc3443f2862e1 ChangeLog 4215
+SHA256 84dae9acaa9fcda3e75332d1e53efdaa96077828999a5100c6636148b8f5d453 ChangeLog 4215
 MISC metadata.xml 161 RMD160 fee76f69ba822cd04301c58fa0c26ecaf8cc8fb9 SHA1 0aee2176f15a238a6d8fbbf83e4e0fd58653a3fa SHA256 82d33b3ca60662bc745d30d53bb20d04ea588d5aae556ed16efcacdcc37fd4bd
 MD5 20e2255501865de5b568424821abf69d metadata.xml 161
 RMD160 fee76f69ba822cd04301c58fa0c26ecaf8cc8fb9 metadata.xml 161
@@ -17,10 +22,13 @@ SHA256 82d33b3ca60662bc745d30d53bb20d04ea588d5aae556ed16efcacdcc37fd4bd metadata
 MD5 3f18ac90637c8483c5dddb3a2f7505e1 files/digest-mythtv-themes-0.19 253
 RMD160 59bd0f19cf7665d8ede65518a7561df1fb6c2201 files/digest-mythtv-themes-0.19 253
 SHA256 d3314e98420062df181dc01c642d97b97fd49bd7a2882deb6ad423a39a141738 files/digest-mythtv-themes-0.19 253
+MD5 023cd7d8fd73a268c7f05f902526e468 files/digest-mythtv-themes-0.20 256
+RMD160 05cf915e7e505f0174eeaa67cb094f333da77609 files/digest-mythtv-themes-0.20 256
+SHA256 30cb85f42cb37a3e0137174d3baef1ea8d60bd4675542299eb74298057c367e6 files/digest-mythtv-themes-0.20 256
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3-ecc0.1.6 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEiLeWOpjtAl+gMRURAoEtAKC0VH1v2pKTYsSiWAHMuHkzpeJ3XQCgnt2l
-st2gs/0Luk43B6inZ0gjmlE=
-=Tnm/
+iD8DBQFFBiIEoeSe8B0zEfwRAqAEAJsFfQD1Eay6lpE8jkqF0RVSWnsTBwCgg9DY
+3vHD9PIcOJfpCCwpUOc5iik=
+=dFsN
 -----END PGP SIGNATURE-----
