@@ -1,0 +1,3 @@
+MD5 d15536875424579df76a2a296db04b95 myththemes-0.20.tar.bz2 14184343
+RMD160 8b5a3ee1ee8b0c3e94a9c42c625e2097c09bf3b1 myththemes-0.20.tar.bz2 14184343
+SHA256 b647ce10b6a35c2dd0f68e38ca60f10f0739ff3b3082f371282235e21260998c myththemes-0.20.tar.bz2 14184343
