@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/mythtv-themes
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.21 2006/06/08 23:49:33 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.22 2006/09/12 02:56:47 cardoe Exp $
+
+*mythtv-themes-0.20 (12 Sep 2006)
+
+  12 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
+  +mythtv-themes-0.20.ebuild:
+  revision bump
 
   08 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
   mythtv-themes-0.19.ebuild:
